test/fail/preprocess/longInclude/test.twge
#include "abc.twge" #include "abc.twge"